# Xynera

./: .env.example  BACKEND_REORGANIZATION_COMPLETE.md  FILE_STRUCTURE.txt  IMPLEMENTATION_COMPLETE.md  README.md  SETUP_COMPLETE.md  WORKFLOW_REORGANIZED.md  docker-compose.yml  pyproject.toml  requirements.txt
MCP-layer/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  config.py  demo_runner.py  docker-compose.yml  example_usage.py  growth_intelligence_server.py  reddit_sentiment_server.py  requirements.txt  setup.py
MCP-layer/services/: __init__.py  playwright_crawler.py
MCP-layer/services/ad_intelligence/: __init__.py  linkedin_tools.py  meta_ads_tools.py
MCP-layer/services/technical_signals/: __init__.py  patents_tools.py
MCP-layer/services/user_voice/: __init__.py  hackernews_tools.py  reddit_tools.py
MCP-layer/services/utils/: models.py
backend/: .gitignore  Dockerfile  ORCHESTRATOR_INTEGRATION.md  orchestrator_main.py  requirements.txt  run_workers.py  test_firecrawl_integration.py  test_mcp_server.py
backend/alembic/: env.py
backend/alembic/versions/: a615172486d7_initial_tables.py
backend/app/: cli.py  config.py  main.py
backend/app/agents/: adjacent_market_agent.py  base_agent.py  competitive_landscape_agent.py  market_trend_agent.py  messaging_agent.py  orchestrator.py  orchestrator_instances.py  pricing_agent.py  win_loss_agent.py
backend/app/api/: queries.py  results.py  router.py  sessions.py  websocket.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/db/: models.py  session.py
docs/: BACKEND_INTEGRATION.md  COMPLETE_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1773573268943-71f7c225c8dfc.mjs
frontend/src/: App.tsx  index.css
tests/: test_orchestrator.py
(+30 files in other folders)
